banner and Early access
early access and banner section. Early access gradient logo issue

--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
             </ul>
             <button class="btn">Get Early Access</button>
         </nav>
-
-
     </header>
 
     <main>
+        <div class="hero-section">
+            <div class="banner-text">
+                <div class="early-access">
+                    <div class="circle">
+                        <div class="outer">
+                            <div class="inner"></div>
+                        </div>
+                    </div>
+                    <p>Early Access Now Open</p>
+                </div>
+
+
+            </div>
+            
+        </div>
+
 
     </main>
 
