--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
                     </div>
                     <p>Early Access Now Open</p>
                 </div>
+                <div class="moto-txt">
+                    <h1><span class="first-line">Structured Thinking,</span><br><span class="second-line">Not Just Note-Taking.</span></h1>
+                </div>
+                <div class="details">
+                    <p>
+                        A private space to store notes, links, and learning summaries — designed to<br>
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                    </p>
 
-
+                </div>
+                <div class="hero-btns">
+                    <button class="btn-one">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+                </div>
             </div>
             
         </div>
