--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1600">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +48,8 @@
 
                 </div>
                 <div class="hero-btns">
-                    <button class="btn-one">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+                    <button class="btn-one"><span>Start Building Your Vault</span> <img src="assets/ArrowRight.png" height="20px" width="20px"></button>
+                    <button class="btn-two"><i class="fa-solid fa-play" style="color: #ffffff;"></i> <span>See How It Works</span></button>
                 </div>
             </div>
             
