--- a/index.html
+++ b/index.html
@@ -55,6 +55,45 @@
             
         </div>
 
+        <div class="inspire-section">
+            <h1><br>Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+
+        <div class="feature-section">
+            <div class="feature-card">
+                <div class="feature-bg">
+                    <img src="assets/Vector.png">
+                </div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-bg">
+                    <img src="assets/Bookmarks.png">
+                </div>
+                <h2>Bookmark overload</h2>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-bg">
+                    <img src="assets/Brain.png">
+                </div>
+                <h2>No idea connections</h2>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-bg">
+                    <img src="assets/Info.png">
+                </div>
+                <h2>Forgetting what you learned</h2>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+            
+
+        </div>
+
+
 
     </main>
 
