--- a/index.html
+++ b/index.html
@@ -93,7 +93,41 @@
 
         </div>
 
+        <div class="solution-container">
+            <div class="solution">
+                <img src="assets/knowledge.png">
+                <div class="solution-txt-container">
+                    <div class="solution-txt">
+                        <h3>THE SOLUTION</h3>
+                        <h1>Your Second Brain,<br>
+                            Structured By Design.</h1>
+                        <p>
+                            Personal Knowledge Vault isn't another note-taking app. z<br>It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.
+                        </p>
+                    </div>
+                    
+                    <div class="check-container">
+                        <div class="check">
+                            <img src="assets/CheckCircle.png">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="check">
+                            <img src="assets/CheckCircle.png">
+                            <p>Connect related concepts automatically as you write</p>
+                        </div>
+                        <div class="check">
+                            <img src="assets/CheckCircle.png">
+                            <p>Build lasting knowledge through reflection prompts</p>
+                        </div>
+                        <div class="check">
+                            <img src="assets/CheckCircle.png">
+                            <p>Find anything instantly with semantic search</p>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
 
     </main>
 
