--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
             </div>
         </div>
 
+        <div class="conclusion-container">
+            <div class="conclusion">
+                <div class="txt-area">    
+                    <h1>Ready To Think More Clearly?</h1>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+                </div>
+                <div class="button-area">
+                    <button class="con-btn">Get Early Access <img src="assets/ArrowRight.png"></button>
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+            </div>
+
+        </div>
+
     </main>
 
     <footer>
