Footer section complete
Full and final footer

--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@
     </main>
 
     <footer>
+        <div class="footer-logo-container">
+            <div class="footer-logo">
+                <img src="assets/logo-footer.png">
+            </div>
+            <div class="social">
+                <p>Social Links</p>
+                <div class="social-logo">
+                    <a class="tw" href=""><i class="fa-brands fa-x-twitter" style="color: #000000;"></i></a>
+                    <a class="in" href=""><i class="fa-brands fa-linkedin-in" style="color: #000000;"></i></a>
+                    <a class="fb" href=""><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <hr>
+
+            <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+
 
     </footer>
 </body>
